syntax = "proto3";
package cosmwasm.tokenfactory;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/CosmWasm/wasmd/x/tokenfactory/types";

message DenomAuthorityMetadata {
    option (gogoproto.equal) = true;
  
    // Can be empty for no admin, or a valid osmosis address
    string admin = 1 [ (gogoproto.moretags) = "yaml:\"admin\"" ];
  }