syntax = "proto3";
package cosmwasm.tokenfactory;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmwasm/tokenfactory/params.proto";

option go_package = "github.com/CosmWasm/wasmd/x/tokenfactory/types";

// Query defines the gRPC querier service.
service Query {
    // Parameters queries the parameters of the module.
    rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
      option (google.api.http).get = "/cosmwasm/tokenfactory/params";
    }
  }
  
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}
  
// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
    // params holds all the parameters of this module.
    Params params = 1 [(gogoproto.nullable) = false];
}